# BOM_Finder

./: .codex_ui_diff.tmp  AGENTS.md  CLAUDE.md  FLYBOX_12_BOM_RAW_jlcpcb_cpl.csv  README.md  pyproject.toml  read.txt
.ai/: README.md  agent-roster.md  delivery-workflow.md  operating-model.md
.ai/agents/: backend-platform.md  data-ml.md  frontend-experience.md  orchestrator.md  product-manager.md  release-operations.md  security-quality.md  solution-architect.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: backend-services-lead.agent.md  coding_qwen_agent.agent.md  context-curator.agent.md  data-ai-lead.agent.md  domain-process-analyst.agent.md  enterprise-orchestrator.agent.md  frontend-experience-lead.agent.md  platform-sre-lead.agent.md  product-strategist.agent.md  quality-engineering-lead.agent.md  qwen_agent.agent.md  release-manager.agent.md  repo-cartographer.agent.md  security-compliance-lead.agent.md  solution-architect.agent.md  technical-writer-enable.agent.md
.github/instructions/: agent-routing.instructions.md  context-economy.instructions.md
data/: bom_workbench.db  bom_workbench.session.json
instructions/: bom_llm_build_prompts.md
instructions/plan/: 00-plan-index.md  01-architecture-and-adrs.md  02-folder-structure.md  03-data-model.md  04-csv-ingestion.md  05-provider-integration.md  06-enrichment-pipeline.md  07-ui-design.md  08-export-system.md  09-job-management.md  10-security-and-observability.md  11-testing-strategy.md  12-implementation-phases.md  (+9 more)
resources/themes/: dark.qss
tests/: conftest.py
(+108 files in other folders)
