[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "bom-workbench"
version = "0.1.0"
description = "AI BOM Finder for PCB making."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "F2X" }]
dependencies = [
  "PySide6",
  "qasync",
  "httpx",
  "pydantic>=2",
  "pandas",
  "openpyxl",
  "sqlmodel",
  "SQLAlchemy>=2",
  "tenacity",
  "structlog",
  "keyring",
  "charset-normalizer",
  "typing-extensions",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "respx",
  "ruff",
  "mypy",
]

[project.scripts]
bom-workbench = "bom_workbench.__main__:main"

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
